--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,15 @@
 # App
 app:
   name: Authentication Service
+  description:
   path: /usr/app/data
 
 # JWT
 jwt:
   secret-key: WvvhSWaLzE#3eTUU93RhLgh!c3io@YGqf7%9G5Sd*p3oNrjHVKF&E^Kx5N5zr9pUT#
-  issuer: Smarthome - Video server
-  expiry-time-in-m: 0
-  refresh-expiry-time-in-m: 60
+  issuer:
+  expiry-time-in-m: 120
+  refresh-expiry-time-in-m: 120
 
 # Actuator
 management:
@@ -20,6 +21,7 @@ management:
 info:
   app:
     name: ${app.name}
+    description: ${app.description}
 
 # Logging
 logging:
@@ -33,36 +35,6 @@ logback:
   destination:
     hostname: logstash
     port: 5044
-
-# Load balancing
-ribbon:
-  http:
-    client:
-    #enabled=true:
-
-# Web client:
-web-client:
-  conn-timeout: 3000
-  read-timeout: 3000
-
-# Clients
-devices-service:
-  url: localhost:8889
-sdp:
-  host: smarthomedesa.personal.com.ar
-  uiapi:
-    subscriber-url: https://${sdp.host}/UIAPI/Subscriber
-  backofficeapi:
-    subscriber-url: https://${sdp.host}/BackOfficeApi/REST/Subscribers?$expand=Parameters&$filter=PKID eq %s
-
-# Feign
-feign:
-  client:
-    config:
-      default:
-        connectTimeout: 5000
-        readTimeout: 5000
-        loggerLevel: basic
 
 # Server
 server:
@@ -80,7 +52,6 @@ spring:
     # Distributed tracing
     zipkin:
       base-url: http://zipkin:9411/
-
     sleuth:
       sampler:
         probability: 1
