--- a/src/main/resources/application-DEV.yml
+++ b/src/main/resources/application-DEV.yml
@@ -67,14 +67,15 @@ spring:
 
   # Mysql
   datasource:
-    url: jdbc:mysql://localhost:3306/authentication
+    url: jdbc:mariadb://localhost:3306/authentication
     username: authentication
     password: w4miTXcHXCXL45pbUnTBeVg
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    initialization-mode: embedded
+    driver-class-name: org.mariadb.jdbc.Driver
+    initialization-mode: never
+    #initialization-mode: always
   jpa:
     hibernate:
       ddl-auto: none
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+        dialect: org.hibernate.dialect.MariaDBDialect
