--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,14 +66,14 @@ spring:
 
   # Mysql
   datasource:
-    url: jdbc:mysql://localhost:3306/authentication
-    username: authentication
+    url: jdbc:mariadb://masternode.cluster:3306/authentication
+    username: micro-jcon
     password: w4miTXcHXCXL45pbUnTBeVg
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    initialization-mode: embedded
+    driver-class-name: org.mariadb.jdbc.Driver
+    initialization-mode: never
   jpa:
     hibernate:
       ddl-auto: none
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+        dialect: org.hibernate.dialect.MariaDBDialect
