--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -70,7 +70,7 @@ spring:
     username: micro-jcon
     password: w4miTXcHXCXL45pbUnTBeVg
     driver-class-name: org.mariadb.jdbc.Driver
-    initialization-mode: never
+    initialization-mode: always
   jpa:
     hibernate:
       ddl-auto: none
