--- a/src/main/resources/application-DEV.yml
+++ b/src/main/resources/application-DEV.yml
@@ -1,4 +1,3 @@
-
 # App
 app:
   name: Authentication Service
@@ -25,6 +24,8 @@ management:
   endpoint:
     health:
       show-details: always
+      probes:
+        enabled: true
 
 # Info
 info:
@@ -47,7 +48,7 @@ logback:
 
 # Server
 server:
-  port: 9101
+  port: 9100
   error:
     include-message: always
   servlet:
