--- a/pom.xml
+++ b/pom.xml
@@ -218,8 +218,10 @@
 							<workingDirectory>${project.basedir}</workingDirectory>
 							<arguments>
 								<argument>build</argument>
+								<argument>--platform</argument>
+								<argument>linux/arm/v7</argument>
 								<argument>-t</argument>
-								<argument>${project.groupId}/${project.artifactId}:${project.version}</argument>
+								<argument>maulpdocker/my-repo:auth-latest</argument>
 								<argument>.</argument>
 							</arguments>
 						</configuration>
@@ -228,26 +230,27 @@
 					<!-- Login and Push the image to a docker repo. -->
 					<execution>
 						<id>docker-login</id>
-						<phase>deploy</phase>
+						<phase>install</phase>
 						<goals>
 							<goal>exec</goal>
 						</goals>
 						<configuration>
-							<executable>docker</executable>
+							<executable>echo</executable>
 							<workingDirectory>${project.basedir}</workingDirectory>
 							<arguments>
+								<argument>123Mau15975300</argument>
+								<argument>|</argument>
+								<argument>docker</argument>
 								<argument>login</argument>
 								<argument>-u</argument>
-								<argument>${docker.user}</argument>
-								<argument>-p</argument>
-								<argument>${docker.password}</argument>
-								<argument>${docker.url}</argument>
+								<argument>maulpdocker</argument>
+								<argument>--password-stdin</argument>
 							</arguments>
 						</configuration>
 					</execution>
 					<execution>
 						<id>docker-push</id>
-						<phase>deploy</phase>
+						<phase>install</phase>
 						<goals>
 							<goal>exec</goal>
 						</goals>
@@ -256,10 +259,29 @@
 							<workingDirectory>${project.basedir}</workingDirectory>
 							<arguments>
 								<argument>push</argument>
-								<argument>${project.groupId}/${project.artifactId}:${project.version}</argument>
+								<argument>maulpdocker/my-repo:auth-latest</argument>
 							</arguments>
 						</configuration>
 					</execution>
+				
+					<!-- Trigger deployment in Kubernetes -->
+					<execution>
+						<id>kubernetes-deploy</id>
+						<phase>install</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>kubectl</executable>
+							<workingDirectory>${project.basedir}</workingDirectory>
+							<arguments>
+								<argument>rollout</argument>
+								<argument>restart</argument>
+								<argument>deployment/auth-microservice</argument>
+							</arguments>
+						</configuration>
+					</execution>
+					
 				</executions>
 			</plugin>
 
