Minor changes to maintain local dev environment working, changed from Java 11 to Java 8

--- a/src/main/resources/application-DEV.yml
+++ b/src/main/resources/application-DEV.yml
@@ -76,7 +76,7 @@ spring:
   # Mysql
   datasource:
     url: jdbc:mariadb://localhost:3306/authentication
-    username: authentication
+    username: micro-jcon
     password: w4miTXcHXCXL45pbUnTBeVg
     driver-class-name: org.mariadb.jdbc.Driver
     initialization-mode: never
